configs/wallabag/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: wallabag.herbamatte.local
    http:
      paths:
      - backend:
          service:
            name: wallabag
            port:
              number: 80
        pathType: ImplementationSpecific
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: admin-https
# spec:
#   entryPoints:
#     - web
#     - websecure
#   routes:
#   - match: Host(`wallabag.herbamatte.local`)
#     kind: Rule
#     services:
#     - name: wallabag
#       port: 80
#     #  scheme: https
#     middlewares:
#     - name: admin-https
#     #- name: admin-auth
#     #- name: admin-header
#   # tls:
#   #   secretName: supersecret
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: admin-auth
# spec:
#   basicAuth:
#     secret: authsecret
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: admin-https
# spec:
#   redirectScheme:
#     scheme: https
#     permanent: true
#     port: 443
